pulumi/aws/eks-cluster/k8s/manifests/fastapi/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-deployment
  namespace: default
  labels:
    app: fastapi
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fastapi
  template:
    metadata:
      labels:
        app: fastapi
    spec:
      nodeSelector: {}
      containers:
      - name: fastapi
        image: luismiguelsaez/fastapi-cache:v0.3
        ports:
        - name: http
          containerPort: 8000
        resources:
          requests:
            cpu: 100m
            memory: 64Mi
          limits:
            cpu: 250m
            memory: 128Mi
