pulumi/aws/eks-cluster/k8s/manifests/fastapi/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: fastapi-service
  namespace: default
spec:
  selector:
    app: fastapi
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
  type: NodePort
